--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -9,7 +9,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Artemisconsultinginc.com -->
     <title>FDA Drug Monitor</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{%  static "bootstrap-3.3.5-dist/css/paper.css" %}" rel="stylesheet">
+    <link href="{% static "css/core.css" %}" rel="stylesheet">
+
     {% block extra_css %}
     {% endblock %}
 
@@ -22,39 +24,38 @@
 <head>
 
 <body>
-<div class="container-fluid" style="max-width:1024px;padding:0px 12px 0px 12px;">
-<nav class="navbar navbar-default">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span> </button>
-    <a class="navbar-brand" href="{%  url 'homepage' %}">FDA Drug Monitor</a> </div>
-  <div id="bs-example-navbar-collapse-9" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-      <li> <a href="{%  url 'browse_labels' %}">Drug Names</a> </li>
-      <li> <a href="{% url 'browse_events' %}">Adverse Reactions</a> </li>
-      <li> <a href="{% url 'browse_enforcements' %}">Enforceable Actions</a> </li>
-      <!--<li> <a href="manufacturers.html">Drug Manufacturers</a> </li>-->
-    </ul>
-  </div>
-</nav>
-</div>
-<!-- end nav/begin body -->
-<div class="container-fluid" style="max-width:1024px;padding:0px 24px 0px 24px;">
+    <nav class="navbar navbar-default">
+        <div class="container" style="max-width:1024px;">
+        <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> </button>
+                <a class="navbar-brand" href="{%  url 'homepage' %}">FDA Drug Monitor</a>
+            </div>
+            <div id="bs-example-navbar-collapse-9" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li> <a href="{%  url 'browse_labels' %}">Drug Names</a> </li>
+                    <li> <a href="{% url 'browse_events' %}">Adverse Events</a> </li>
+                    <li> <a href="{% url 'browse_enforcements' %}">Enforcement Reports</a> </li>
+                    <!--<li> <a href="manufacturers.html">Drug Manufacturers</a> </li>-->
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  {% block body %}
-  {% endblock %}
+    <!-- end nav/begin body -->
+    <div class="container" style="max-width:1024px;">
+        {% block body %}
+        {% endblock %}
+    </div>
 
-</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
+    <script src="{%  static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
+    {% block extra_js %}
+    {% endblock %}
 </body>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-{% block extra_js %}
-{% endblock %}
-
 </html>
