--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -4,47 +4,48 @@
 
 {% block body %}
 
-  <div class="row"> <img src="{% static "images/drugs.png" %}" class="img-responsive" alt="drugs banner image">
-    <h3>Drug Details</h3>
-    <p>You searched for {{ q }}</p>
-  </div>
+    <img src="{% static "images/drugs.png" %}" class="img-responsive center-block" alt="drug labels banner image">
 
-<div>
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>Enforcement Reports</h3>
+            <p>Information for {{ q }}</p>
+        </div>
+    </div>
+
+
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#labels" aria-controls="labels" role="tab" data-toggle="tab">Labels</a></li>
-    <li role="presentation"><a href="#events" aria-controls="events" role="tab" data-toggle="tab">Adverse Events</a></li>
-    <li role="presentation"><a href="#enforcements" aria-controls="enforcements" role="tab" data-toggle="tab">Enforcement Reports</a></li>
-  </ul>
-</div>
+<div class="panel">
+    <div class="panel-body">
+        <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#details" aria-controls="details" role="tab" data-toggle="tab">Details</a></li>
+            <li role="presentation"><a href="#drugs" aria-controls="drugs" role="tab" data-toggle="tab">Drugs</a></li>
+        </ul>
 
-<div class="tab-content">
-  <div role="tabpanel" class="tab-pane active" id="labels">
-  {% for results in labels %}<br />
-  {% for key, value in results.items %}
-  {{ key }}: {{ value }}<br />
-  {% endfor %}
-  {% endfor %}
-  </div>
+        <div class="tab-content">
+            <!-- tab 1 -->
+            <div role="tabpanel" class="tab-pane active" id="details">
+                {% for results in enforcements %}<br />
+                    {% for key, value in results.items %}
+                        {{ key }}: {{ value }}<br />
+                    {% endfor %}
+                {% endfor %}
+          </div>
 
-  <div role="tabpanel" class="tab-pane" id="events">
-  <p>This chart will allow clicking through to another chart to get additional detail</p>
-  <div id="adverseChart"></div><br/>
-  <div id="productChart"></div><br/>
-  {% for results in events %}<br />
-  {% for key, value in results.items %}
-  {{ key }}: {{ value }}<br />
-  {% endfor %}
-  {% endfor %}
-  </div>
+            <!-- tab 2 -->
+            <div role="tabpanel" class="tab-pane" id="drugs">
+            <p>This chart will allow clicking through to another chart to get additional detail</p>
+            <div id="adverseChart"></div><br/>
+            <div id="productChart"></div><br/>
+            {% for results in events %}<br />
+            {% for key, value in results.items %}
+            {{ key }}: {{ value }}<br />
+            {% endfor %}
+            {% endfor %}
+            </div>
+        </div>
 
-  <div role="tabpanel" class="tab-pane" id="enforcements">
-  {% for results in enforcements %}<br />
-  {% for key, value in results.items %}
-  {{ key }}: {{ value }}<br />
-  {% endfor %}
-  {% endfor %}
-  </div>
+    </div>
 </div>
 
 {% endblock %}
