Incorporated html changes with API code changes

--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -39,11 +39,6 @@
                 <div id="adverseChart" style="width:100%; margin: 0 auto"></div>
                 <br/>
                 <div id="productChart"></div><br/>
-                    {% for results in events %}<br />
-                        {% for key, value in results.items %}
-                            {{ key }}: {{ value }}<br />
-                        {% endfor %}
-                    {% endfor %}
             </div>
 
         </div>
@@ -58,7 +53,7 @@
 
     var drugNames = 
         [
-        {% for results in events %}
+        {% for results in events_count %}
         "{{ results.term }}",
         {% endfor %}
     ];
@@ -67,7 +62,7 @@
         name: 'Count',
         // data points with extra properties:
         data: [
-        {% for results in events %}
+        {% for results in events_count %}
         {x: {{ forloop.counter0 }}, y: {{ results.count }}, investigation: true},
         {% endfor %}
         ]
