--- a/code/templates/core/homepage.html
+++ b/code/templates/core/homepage.html
@@ -5,7 +5,6 @@
 
     <img src="{% static "images/home.png" %}" class="img-responsive center-block" alt="home banner image">
 
-<<<<<<< HEAD
     <div class="row">
         <div class="col-xs-12">
             <h3>Search for Information</h3>
@@ -14,7 +13,7 @@
         </div>
     </div>
 
-    <form action="{% url 'search' %}" method="get" name="main_search" id="mainsearch">
+    <form action="" method="get" name="main_search" id="mainsearch">
         <div class="row">
             <div class="col-xs-12">
                 <div class="panel" id="search">
@@ -31,26 +30,32 @@
 
         <div class="row">
             <div class="col-xs-4">
-                <button type="button" class="btn btn-default btn-block btn-lg">Drug Names</button>
+                <button id="drug_button" type="button" class="btn btn-default btn-block btn-lg">Drug Names</button>
             </div>
             <div class="col-xs-4">
-                <button type="button" class="btn btn-default btn-block btn-lg">Adverse Events</button>
+                <button id="adverse_button" type="button" class="btn btn-default btn-block btn-lg">Adverse Events</button>
             </div>
             <div class="col-xs-4">
-                <button type="button" class="btn btn-default btn-block btn-lg">Enforcement Reports</button>
-=======
-  <div class="row" style="padding:24px;">
-    <div class="col-md-6">
-    <form class="form-inline" action="{% url 'search_labels' %}" method="get" name="main_search" id="mainsearch">
-        <div class="form-group">
-            <div class="input-group">
-                <input type="text" class="form-control" name="q" id='search' placeholder="Search for...">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
->>>>>>> separated out and modified code to return additional information for each browse type
+                <button id"enforcement_button" type="button" class="btn btn-default btn-block btn-lg">Enforcement Reports</button>
             </div>
         </div>
     </form>
 
+{% endblock %}
+
+{% block extra_js %}
+<script>
+$("#drug_button").click(function() {
+    $('form').attr("action", "{% url 'search_labels' %}");
+    $('form').submit();
+});
+$("#adverse_button").click(function() {
+    $('form').attr("action", "{% url 'search_events' %}");
+    $('form').submit();
+});
+$("#enforcement_button").click(function() {
+    $('form').attr("action", "{% url 'search_enforcements' %}");
+    $('form').submit();
+});
+</script>
 {% endblock %}
