--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -9,7 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Artemisconsultinginc.com -->
     <title>FDA Drug Monitor</title>
-    <link href="{%  static "bootstrap-3.3.5-dist/css/paper.css" %}" rel="stylesheet">
+    <link href="{% static "bootstrap-3.3.5-dist/css/paper.css" %}" rel="stylesheet">
     <link href="{% static "css/core.css" %}" rel="stylesheet">
 
     {% block extra_css %}
@@ -53,8 +53,8 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-    <script src="{%  static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "highcharts-4.1.6/highcharts.js" %}"></script>
+    <script src="{% static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
     {% block extra_js %}
     {% endblock %}
 </body>
