adding jquery, fixed typo

--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -251,7 +251,7 @@
 			}
 
     	$(function() {
-            var map_color = '18, 83, 147'
+            var map_color = '18, 83, 147';
             $('#map').highcharts('Map', {
                 credits: {
                     enabled: false
