--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -52,7 +52,7 @@
         {% endblock %}
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="{% static "js/jquery-2.1.3.min.js" %}"></script>
     <script src="{% static "highcharts-4.1.6/highcharts.js" %}"></script>
     <script src="{% static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
     {% block extra_js %}
