--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -26,11 +26,36 @@
         <div class="tab-content">
             <!-- tab 1 -->
             <div role="tabpanel" class="tab-pane active" id="details">
-                {% for results in events %}<br />
-                    {% for key, value in results.items %}
-                        {{ key }}: {{ value }}<br />
+                <!-- accordion panel groups -->
+               <div class="panel-group" aria-multiselectable="true">
+                    {% for result in events %}
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a role="button" data-toggle="collapse" href="#panel{{ forloop.counter }}" aria-expanded="false">
+                                        Safety Report ID: {{ result.safetyreportid }}
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="panel{{ forloop.counter }}">
+                                <div class="panel-body">
+                                    <table class="table table-condensed table-striped">
+                                        <tbody>
+                                            {% for key, value in result.items %}
+                                                <tr>
+                                                    <td>{{ key }}</td>
+                                                    <td>{{ value }}</td>
+                                                </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+
                     {% endfor %}
-                {% endfor %}
+                </div>
             </div>
 
             <!-- tab 2 -->
