--- a/code/templates/core/homepage.html
+++ b/code/templates/core/homepage.html
@@ -7,28 +7,31 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h3>Search for Information</h3>
-            <p>Begin your request for FDA drug information by searching for adverse drug reactions, drugs by manufacturers,
-            or enforcement reports against manufacturers.</p>
+            <h3>Welcome to the FDA Drug Monitor</h3>
+            <p>The information provided by FDA Drug Monitor is the latest and most relevant data available based on the
+                OpenFDA data source. Please note that the information provided is not intended for medical advice,
+                diagnosis, or treatment. Always consult your physician before making drug or treatment decisions.</p>
+            <p>Begin your request for FDA drug-related information by entering a search term and choosing a category from
+                the dropdown menu</p>
         </div>
     </div>
 
     <form action="" method="get" name="main_search" id="mainsearch">
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-7">
                 <div class="panel" id="search">
                     <div class="panel-body">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
                             <input type="text" class="form-control" name="q" id='search-term' placeholder="Search for...">
                             <div class="input-group-btn">
-                                <button class="btn btn-default dropdown-toggle" aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button" id="select-category">Select Category</button>
+                                <button class="btn btn-default dropdown-toggle" aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button" id="select-category">Select a Category</button>
                                     <ul class="dropdown-menu dropdown-menu-right">
-                                        <li><a href="#" data-value="search_labels">DRUG NAMES</li>
+                                        <li><a href="#" data-value="search_labels">DRUG NAMES</a></li>
                                         <li><a href="#" data-value="search_events">ADVERSE EVENTS</a></li>
                                         <li><a href="#" data-value="search_enforcements">ENFORCEMENT REPORTS</a></li>
                                     </ul>
-                                <button class="btn btn-primary" type="button" id="search-category">Search</button>
+                                <button class="btn btn-primary" type="button" id="search-category">GO</button>
                             </div>
                         </div>
                     </div>
