--- a/code/templates/core/landing_adverse_events.html
+++ b/code/templates/core/landing_adverse_events.html
@@ -10,6 +10,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h3>Adverse Events</h3>
+            <p>Select an event from the list to view current event-related information</p>
         </div>
     </div>
 
@@ -18,10 +19,14 @@
         <div class="col-xs-12">
            <div class="panel">
                 <div class="panel-body">
-                    {% for term in terms %}
-                        <a href="{% url 'search_events' %}?q={{ term.term|replace_spaces|urlencode }}">{{ term.term }} <strong>({{ term.count }})</strong></a>
-                        <br/>
-                    {% endfor %}
+                    <div class="list-group">
+                        <a href="#" class="list-group-item active">Adverse Event</a>
+                        {% for term in terms %}
+                            <a href="{% url 'search_events' %}?q={{ term.term|replace_spaces|urlencode }}" class="list-group-item">{{ term.term }}
+                                <span class="badge">{{ term.count }}</span>
+                            </a>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
